make sure all buttons are full width on mobile for feature grid

--- a/src/stylesheets/pageparts/_feature-grid.sass
+++ b/src/stylesheets/pageparts/_feature-grid.sass
@@ -68,6 +68,7 @@
     flex-wrap: wrap
     gap: ($textSpacer / 2)
     margin-top: $textSpacer
+    width: 100%
 
   &__button
     @media (max-width: $maxTablet)
